--- a/TODO
+++ b/TODO
@@ -1,7 +1,12 @@
 
 === TODO === 
 
-* Add OECD index [michael]
-* Update Graphs [dan]
-* Mobile CSS Design & Develop [michael]
-* Dan to add tasks here [dan]
+* UNFINISHED * 
+
+Tabular Data Representation (data.html)
+Home Page
+
+* IN PROGRESS * 
+
+* Google Maps (mike) 
+* CSS (mike) 
