--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
-
 === TODO === 
 
 * UNFINISHED * 
 
-Tabular Data Representation (data.html)
+Tabular Data Representation (data.html)(Dan)
+Finish Graph(graph.html)(Dan)
 Home Page
 
 * IN PROGRESS * 
